fix(web-components): fix static side navigation falling off screen
Fix static side navigation falling off screen, adjust padding for static variant.

.#700

--- a/packages/web-components/src/components/ic-side-navigation/ic-side-navigation.css
+++ b/packages/web-components/src/components/ic-side-navigation/ic-side-navigation.css
@@ -361,13 +361,6 @@ slot[name="app-icon"]::slotted(a) {
     bottom: 0;
   }
 
-  :host(.static) {
-    position: relative;
-    left: auto;
-    top: auto;
-    bottom: auto;
-  }
-
   .app-icon-container {
     padding: var(--ic-space-xxs) 0;
   }
